...
                                <rect key="frame" x="20" y="380" width="374" height="45"/>
                                <color key="backgroundColor" name="secondaryColor"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="yiR-vw-Ojd"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                <state key="normal" title="Serach">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="didTapFindWeather:" destination="9pv-A4-QxB" eventType="touchUpInside" id="sba-n3-1rF"/>
                                </connections>
                            </button>
...
                                            <rect key="frame" x="0.0" y="0.0" width="414" height="697"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Su-5Y-zAD">
                                                    <rect key="frame" x="16" y="75" width="382" height="622"/>
                                                    <subviews>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dubai" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="20" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoCons
                                                            <rect key="frame" x="0.0" y="0.0" width="382" height="48"/>
                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="40"/>
                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Clear sky" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="20" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" i
...
                                                    </constraints>
                                                </view>
                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="large" translatesAutoresizingMaskIntoConstraints="NO" id="J3k-pL-fHz">
                                                    <rect key="frame" x="188.5" y="330" width="37" height="37"/>
                                                    <color key="color" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </activityIndicatorView>
                                                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City not found" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wy2-
                                                    <rect key="frame" x="16" y="333.5" width="382" height="30"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="25"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                            </subviews>
...
